Finished device ex. queues started work on allocator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SOURCES_CPP
   src/main.cpp
 
   # Render
+  src/render/allocator.cpp
   src/render/device.cpp
   src/render/instance.cpp
   src/render/renderer.cpp
