--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "inc/fmt"]
 	path = inc/fmt
 	url = https://github.com/fmtlib/fmt
+[submodule "inc/glm"]
+	path = inc/glm
+	url = https://github.com/g-truc/glm
