--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCES_CPP
 
   # Render
   src/render/allocator.cpp
+  src/render/data_formats.cpp
   src/render/device.cpp
   src/render/image.cpp
   src/render/instance.cpp
@@ -13,7 +14,6 @@ set(SOURCES_CPP
   src/render/render_pass.cpp
   src/render/renderer.cpp
   src/render/swapchain.cpp
-  src/render/vertex.cpp
   src/render/vulkan_includes.cpp
   src/render/window.cpp
 )
