Segfaulting implementation of everything

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,13 +66,13 @@ target_compile_options(Dynamo PUBLIC -Wsuggest-attribute=pure)
 target_compile_options(Dynamo PUBLIC -Wsuggest-attribute=const)
 target_compile_options(Dynamo PUBLIC -Wsuggest-attribute=noreturn)
 target_compile_options(Dynamo PUBLIC -Wmissing-noreturn)
-target_compile_options(Dynamo PUBLIC -Wsuggest-attribute=malloc)
-target_compile_options(Dynamo PUBLIC -Wsuggest-attribute=format)
+# target_compile_options(Dynamo PUBLIC -Wsuggest-attribute=malloc)
+# target_compile_options(Dynamo PUBLIC -Wsuggest-attribute=format)
 target_compile_options(Dynamo PUBLIC -Wmissing-format-attribute)
 target_compile_options(Dynamo PUBLIC -Wsuggest-attribute=cold)
 target_compile_options(Dynamo PUBLIC -Walloc-zero)
 target_compile_options(Dynamo PUBLIC -Warith-conversion)
-target_compile_options(Dynamo PUBLIC -Wduplicated-branches)
+# target_compile_options(Dynamo PUBLIC -Wduplicated-branches)
 target_compile_options(Dynamo PUBLIC -Wduplicated-cond)
 target_compile_options(Dynamo PUBLIC -Wtrampolines)
 target_compile_options(Dynamo PUBLIC -Wfloat-equal)
