--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,33 +134,35 @@ target_link_libraries(Dynamo sebib)
 add_library(glm INTERFACE)
 target_include_directories(glm INTERFACE ${CMAKE_SOURCE_DIR}/inc/glm)
 target_link_libraries(Dynamo glm)
+
+
 # Compile shaders function Stack overflow #60420700
-# find_package(Vulkan COMPONENTS glslc)
-# find_program(glslc_executable NAMES glslc HINTS Vulkan::glslc)
+find_package(Vulkan COMPONENTS glslc)
+find_program(glslc_executable NAMES glslc HINTS Vulkan::glslc)
 
-# function(compile_shader target)
-#     cmake_parse_arguments(PARSE_ARGV 1 arg "" "ENV;FORMAT" "SOURCES")
-#     foreach(source ${arg_SOURCES})
-#         add_custom_command(
-#             OUTPUT ${source}.${arg_FORMAT}
-#             DEPENDS ${source}
-#             DEPFILE ${source}.d
-#             COMMAND
-#                 ${glslc_executable}
-#                 $<$<BOOL:${arg_ENV}>:--target-env=${arg_ENV}>
-#                 $<$<BOOL:${arg_FORMAT}>:-mfmt=${arg_FORMAT}>
-#                 -MD -MF ${source}.d
-#                 -o ${source}.${arg_FORMAT}
-#                 ${CMAKE_CURRENT_SOURCE_DIR}/${source}
-#         )
-#         target_sources(${target} PRIVATE ${source}.${arg_FORMAT})
-#     endforeach()
-# endfunction()
+function(compile_shader target)
+    cmake_parse_arguments(PARSE_ARGV 1 arg "" "ENV;FORMAT" "SOURCES")
+    foreach(source ${arg_SOURCES})
+        add_custom_command(
+            OUTPUT ${source}.${arg_FORMAT}
+            DEPENDS ${source}
+            DEPFILE ${source}.d
+            COMMAND
+                ${glslc_executable}
+                $<$<BOOL:${arg_ENV}>:--target-env=${arg_ENV}>
+                $<$<BOOL:${arg_FORMAT}>:-mfmt=${arg_FORMAT}>
+                -MD -MF ${source}.d
+                -o ${source}.${arg_FORMAT}
+                ${CMAKE_CURRENT_SOURCE_DIR}/${source}
+        )
+        target_sources(${target} PRIVATE ${source}.${arg_FORMAT})
+    endforeach()
+endfunction()
 
-# compile_shader(Dynamo
-#   ENV vulkan1.0
-#   FORMAT bin
-#   SOURCES
-#     src/render/shaders/shader.vert
-#     src/render/shaders/shader.frag
-# )
+compile_shader(Dynamo
+  ENV vulkan1.0
+  FORMAT bin
+  SOURCES
+    src/render/shaders/shader.vert
+    src/render/shaders/shader.frag
+)
