--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,8 @@ target_compile_definitions(Dynamo PUBLIC VERSION_TWEAK=${PROJECT_VERSION_TWEAK})
 # Compiler flags
 target_compile_definitions(Dynamo PUBLIC _GLIBCXX_ASSERTIONS)
 target_compile_options(Dynamo PUBLIC -std=c++2b)
-target_compile_options(Dynamo PUBLIC "$<$<CONFIG:Debug>:-Og>")
+# target_compile_options(Dynamo PUBLIC "$<$<CONFIG:Debug>:-Og>")
+target_compile_options(Dynamo PUBLIC -O0)
 target_compile_options(Dynamo PUBLIC -march=native)
 target_compile_options(Dynamo PUBLIC -fvisibility=default)
 target_compile_options(Dynamo PUBLIC -Wfatal-errors)
