Fixed segfault by doing absolutely nothing?

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,9 @@ target_compile_definitions(Dynamo PUBLIC VERSION_TWEAK=${PROJECT_VERSION_TWEAK})
 target_compile_definitions(Dynamo PUBLIC _GLIBCXX_ASSERTIONS)
 target_compile_options(Dynamo PUBLIC -std=c++2b)
 # target_compile_options(Dynamo PUBLIC "$<$<CONFIG:Debug>:-Og>")
-target_compile_options(Dynamo PUBLIC -O0)
+# target_compile_options(Dynamo PUBLIC -lasan)
+# target_compile_options(Dynamo PUBLIC -fno-omit-frame-pointer)
+target_compile_options(Dynamo PUBLIC -Og)
 target_compile_options(Dynamo PUBLIC -march=native)
 target_compile_options(Dynamo PUBLIC -fvisibility=default)
 target_compile_options(Dynamo PUBLIC -Wfatal-errors)
