--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "inc/glm"]
 	path = inc/glm
 	url = https://github.com/g-truc/glm
+[submodule "inc/stb"]
+	path = inc/stb
+	url = https://github.com/nothings/stb
