--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,8 +43,8 @@ target_compile_definitions(Dynamo PUBLIC VERSION_TWEAK=${PROJECT_VERSION_TWEAK})
 target_compile_definitions(Dynamo PUBLIC _GLIBCXX_ASSERTIONS)
 target_compile_options(Dynamo PUBLIC -std=c++2b)
 # target_compile_options(Dynamo PUBLIC "$<$<CONFIG:Debug>:-Og>")
-# target_compile_options(Dynamo PUBLIC -lasan)
-# target_compile_options(Dynamo PUBLIC -fno-omit-frame-pointer)
+target_compile_options(Dynamo PUBLIC -lasan)
+target_compile_options(Dynamo PUBLIC -fno-omit-frame-pointer)
 target_compile_options(Dynamo PUBLIC -Og)
 target_compile_options(Dynamo PUBLIC -march=native)
 target_compile_options(Dynamo PUBLIC -fvisibility=default)
@@ -53,9 +53,6 @@ target_compile_options(Dynamo PUBLIC -Wfatal-errors)
 target_compile_options(Dynamo PUBLIC -D_GLIBCXX_DEBUG)
 target_compile_options(Dynamo PUBLIC -D_GLIBCXX_ASSERTIONS)
 target_compile_options(Dynamo PUBLIC -D_GLIBCXX_CONCEPT_CHECKS)
-# target_compile_options(Dynamo PUBLIC -D_GLIBCXX_DEBUG_BACKTRACE)
-# target_compile_options(Dynamo PUBLIC --enable-libstdcxx-backtrace=yes)
-# target_compile_options(Dynamo PUBLIC -lstdc++_libbacktrace)
 
 
 
